--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,46 @@
+.button-list {
+    list-style-type: none;
+    padding: 0;
+}
 
+.button-list li {
+    margin: 10px 0;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: #004b9a;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #0056b3;
+}
+
+#footer {
+
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #fffefef4; /* Color de fondo */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
+    border-radius: 10px; /* Bordes redondeados (opcional) */
+    padding: 20px; /* Espaciado interno */
+    transition: box-shadow 0.3s ease; /* Animación suave al pasar el mouse */
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #742323;
+    color: #333;
+}
