--- a/css/styles.css
+++ b/css/styles.css
@@ -4,53 +4,52 @@ body {
     padding: 0;
     background-color: #121212;
     color: #fff;
-    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
 }
 
 header {
+    
     padding: 10px 20px;
 }
 
 .menu {
-    display: flex;  
+    display: flex;
     justify-content: flex-end;
     list-style: none;
-    margin  : 30px;
-    margin-right: 80px;
+    margin: 0;
+    padding: 0;
+}
+
+.menu li {
+    margin-left: 20px;
 }
 
 .menu a {
-    margin-left:80px;
     color: #ffcc00;
     text-decoration: none;
     font-weight: bold;
 }
 
-.principal {
+.hero {
     text-align: center;
     padding: 50px 20px;
-    color: #ffcc00;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
 }
 
-.principal h1 {
+.hero h1 {
     font-size: 3rem;
     margin-bottom: 10px;
+    color: #ffcc00;
 }
 
-.principal p {
+.hero p {
     font-size: 1.2rem;
-    margin-right: 50px;
 }
 
-.reproductor {
+.player {
     margin-top: 20px;
-    margin-right: 180px;
 }
 
-.reproductor .play {
+.player .play {
     background-color: #ffcc00;
     border: none;
     color: #121212;
@@ -60,28 +59,30 @@ header {
     border-radius: 5px;
 }
 
-.episodios {
+.topics {
     display: flex;
     justify-content: space-around;
     padding: 20px;
 }
 
-.episodio {
+.topic {
     text-align: center;
     max-width: 200px;
 }
 
-.episodio img {
+.topic img {
     width: 100%;
     border-radius: 10px;
 }
 
-.episodio h3 {
+.topic h3 {
     margin-top: 10px;
     color: #ffcc00;
 }
 
 footer {
     text-align: center;
+    padding: 10px 20px;
     color: #888;
 }
+
