--- a/css/styles.css
+++ b/css/styles.css
@@ -4,52 +4,53 @@ body {
     padding: 0;
     background-color: #121212;
     color: #fff;
+    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
 }
 
 header {
-    
     padding: 10px 20px;
 }
 
 .menu {
-    display: flex;
+    display: flex;  
     justify-content: flex-end;
     list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.menu li {
-    margin-left: 20px;
+    margin  : 30px;
+    margin-right: 80px;
 }
 
 .menu a {
+    margin-left:80px;
     color: #ffcc00;
     text-decoration: none;
     font-weight: bold;
 }
 
-.hero {
+.principal {
     text-align: center;
     padding: 50px 20px;
-    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
+    color: #ffcc00;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.hero h1 {
+.principal h1 {
     font-size: 3rem;
     margin-bottom: 10px;
-    color: #ffcc00;
 }
 
-.hero p {
+.principal p {
     font-size: 1.2rem;
+    margin-right: 50px;
 }
 
-.player {
+.reproductor {
     margin-top: 20px;
+    margin-right: 180px;
 }
 
-.player .play {
+.reproductor .play {
     background-color: #ffcc00;
     border: none;
     color: #121212;
@@ -59,30 +60,28 @@ header {
     border-radius: 5px;
 }
 
-.topics {
+.episodios {
     display: flex;
     justify-content: space-around;
     padding: 20px;
 }
 
-.topic {
+.episodio {
     text-align: center;
     max-width: 200px;
 }
 
-.topic img {
+.episodio img {
     width: 100%;
     border-radius: 10px;
 }
 
-.topic h3 {
+.episodio h3 {
     margin-top: 10px;
     color: #ffcc00;
 }
 
 footer {
     text-align: center;
-    padding: 10px 20px;
     color: #888;
 }
-
