--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,87 @@
-.button-list {
-    list-style-type: none;
-    padding: 0;
-}
-
-.button-list li {
-    margin: 10px 0;
-}
-
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: white;
-    background-color: #004b9a;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    text-align: center;
-    transition: background-color 0.3s ease;
-}
-
-.button:hover {
-    background-color: #0056b3;
-}
-
-#footer {
-
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #fffefef4; /* Color de fondo */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
-    border-radius: 10px; /* Bordes redondeados (opcional) */
-    padding: 20px; /* Espaciado interno */
-    transition: box-shadow 0.3s ease; /* Animación suave al pasar el mouse */
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #742323;
-    color: #333;
+    background-color: #121212;
+    color: #fff;
+    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
+}
+
+header {
+    padding: 10px 20px;
+}
+
+.menu {
+    display: flex;  
+    justify-content: flex-end;
+    list-style: none;
+    margin  : 30px;
+    margin-right: 80px;
+}
+
+.menu a {
+    margin-left:80px;
+    color: #ffcc00;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.principal {
+    text-align: center;
+    padding: 50px 20px;
+    color: #ffcc00;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.principal h1 {
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+.principal p {
+    font-size: 1.2rem;
+    margin-right: 50px;
+}
+
+.reproductor {
+    margin-top: 20px;
+    margin-right: 180px;
+}
+
+.reproductor .play {
+    background-color: #ffcc00;
+    border: none;
+    color: #121212;
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.episodios {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.episodio {
+    text-align: center;
+    max-width: 200px;
+}
+
+.episodio img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.episodio h3 {
+    margin-top: 10px;
+    color: #ffcc00;
+}
+
+footer {
+    text-align: center;
+    color: #888;
 }
