--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #121212;
-    color: #fff;
-    background: url('/img/diseñoWebDegradado.png') no-repeat center center/cover;
+    background-color: black;
+    color: white;
+    background: url('../img/diseñoWebDegradado.png') no-repeat center center/cover;
 }
 
 header {
@@ -16,14 +14,20 @@ header {
     justify-content: flex-end;
     list-style: none;
     margin  : 30px;
-    margin-right: 80px;
+    margin-right: 10px;
 }
 
 .menu a {
-    margin-left:80px;
+    margin-left: 30px;
     color: #ffcc00;
     text-decoration: none;
     font-weight: bold;
+}
+
+.menu img{
+    margin: -10px;
+    margin-left: 30px;
+    width: 40px;
 }
 
 .principal {
@@ -53,7 +57,7 @@ header {
 .reproductor .play {
     background-color: #ffcc00;
     border: none;
-    color: #121212;
+    color: black;
     font-size: 1.5rem;
     padding: 10px 20px;
     cursor: pointer;
@@ -72,8 +76,9 @@ header {
 }
 
 .episodio img {
-    width: 100%;
+    width: 280px;
     border-radius: 10px;
+    border: black solid 1px;
 }
 
 .episodio h3 {
@@ -82,6 +87,7 @@ header {
 }
 
 footer {
-    text-align: center;
-    color: #888;
+    text-align:center;
+    line-height: 80px;
+    color: grey;
 }
