--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ header {
     display: flex;  
     justify-content: flex-end;
     list-style: none;
-    margin  : 30px;
+    margin: 30px;
     margin-right: 10px;
 }
 
@@ -25,7 +25,7 @@ header {
     font-weight: bold;
 }
 
-.menu img{
+.menu img {
     margin: -10px;
     margin-left: 30px;
     width: 40px;
@@ -56,13 +56,19 @@ header {
 }
 
 .reproductor .play {
-    background-color: #ffcc00;
+    background-color: #ffcc00; /* Color normal */
     border: none;
-    color: black;
+    color: white;
     font-size: 1.5rem;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+    transition: background-color 0.3s, cursor 0.3s;
+}
+
+.reproductor .play:disabled {
+    background-color: #B0B0B0; /* Color gris */
+    cursor: not-allowed;
 }
 
 .episodios {
@@ -79,7 +85,7 @@ header {
 }
 
 footer {
-    text-align:center;
+    text-align: center;
     line-height: 80px;
     color: grey;
 }
