--- a/css/sobrenosotros.css
+++ b/css/sobrenosotros.css
@@ -1,36 +1,73 @@
+/* General Styles */
 body {
     font-family: Arial, sans-serif;
     background-color: black;
     color: #ffcc00;
     background: url('../img/fondoDifuminado.png') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 100vh;
+    margin: 0;
 }
 
 header {
     padding: 10px 20px;
+    width: 100%;
+}
+
+nav ul.menu {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    margin: 30px;
+    margin-right: 80px;
+    padding: 0;
+}
+
+.menu a {
+    margin-left: 30px;
+    color: #ffcc00;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.menu img {
+    margin: -10px;
+    margin-left: 30px;
+    width: 40px;
 }
 
 main {
     background-color: rgb(245, 245, 245);
     width: 90%;
-    border-radius:20px ;
+    border-radius: 20px;
     text-align: center;
     padding: 20px;
-    justify-self: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    gap: 20px;
     font-size: 22px;
+    position: relative;
 }
 
-main h1{
+main h1 {
     font-size: 50px;
+    grid-column: 1 / -1;
 }
 
-main > p{
+main > p {
     width: 600px;
     justify-self: center;
+    grid-column: 1 / -1;
 }
 
 main div {
+    position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -40,40 +77,102 @@ div p {
     width: 350px;
     height: fit-content;
     padding: 30px;
-    margin-right: -50px;
-    z-index: 1;
+    margin: 0;
+    z-index: 2;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translateY(-50%);
+    text-align: center;
 }
 
 div img {
     width: 400px;
     border-radius: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-.menu {
-    display: flex;  
-    justify-content: flex-end;
-    list-style: none;
-    margin  : 30px;
-    margin-right: 80px;
-}
-
-.menu a {
-    margin-left:30px;
-    color: #ffcc00;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.menu img{
-    margin: -10px;
-    margin-left: 30px;
-    width: 40px;
+    margin: 10px 0;
+    z-index: 1;
 }
 
 footer {
-    text-align:center;
+    text-align: center;
     line-height: 80px;
     color: grey;
+    width: 100%;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    main {
+        width: 80%;
+        font-size: 20px;
+    }
+
+    .menu a {
+        font-size: 18px;
+    }
+
+    .menu img {
+        width: 35px;
+    }
+
+    div img {
+        width: 350px;
+    }
+}
+
+@media (max-width: 768px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu a {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+
+    main {
+        width: 95%;
+    }
+
+    main h1 {
+        font-size: 40px;
+    }
+
+    main > p {
+        width: 90%;
+    }
+
+    div p {
+        width: 80%;
+        padding: 20px;
+    }
+
+    div img {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    main {
+        padding: 10px;
+        font-size: 18px;
+    }
+
+    .menu a {
+        font-size: 16px;
+    }
+
+    div p {
+        font-size: 16px;
+        padding: 15px;
+    }
+
+    div img {
+        width: 100%;
+    }
+
+    footer p {
+        font-size: 14px;
+    }
 }
