--- a/css/stylesReproductor.css
+++ b/css/stylesReproductor.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: black;
     color: white;
-    background: url('../img/diseñoWebDegradado.png') no-repeat center center/cover;
+    background: url('../img/fondoDifuminado.png') no-repeat center center/cover;
     transition: background 0.5s ease;
 }
 
